# metol

./: Cargo.toml
src/: client.rs  common.rs  lib.rs  mi_entities.rs  parser.rs  receiving_ws_msg.rs  sending_ws_msg.rs  ws_connection.rs
src/mi_entities/: achievement.rs  announcement.rs  channel.rs  drive_file.rs  meta.rs  note.rs  page.rs  role_lite.rs  roll_policies.rs  user.rs
src/parser/: input.rs  node.rs  tests.rs  utils.rs
